--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-# Project exclude paths
-/target/
+.idea
+target
+src/main/resources/img/masters/*
+!src/main/resources/img/masters
+src/main/resources/img/notes/*
+!src/main/resources/img/notes
+!src/main/resources/img/def_photo.jpg
